DeveloperOrg/force-app/main/default/objects/Equipment__c/fields/Equipment_Categories__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Categories__c</fullName>
    <label>Equipment Categories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Equipment_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>printers</fullName>
            </value>
            <value>
                <fullName>phones</fullName>
            </value>
            <value>
                <fullName>projectors</fullName>
            </value>
            <value>
                <fullName>Servers</fullName>
            </value>
            <value>
                <fullName>routers</fullName>
            </value>
            <value>
                <fullName>storage devices</fullName>
            </value>
            <value>
                <fullName>Excavators</fullName>
            </value>
            <value>
                <fullName>bulldozers</fullName>
            </value>
            <value>
                <fullName>cranes</fullName>
            </value>
            <value>
                <fullName>concrete mixers</fullName>
            </value>
            <value>
                <fullName>Assembly machines</fullName>
            </value>
            <value>
                <fullName>conveyor belts</fullName>
            </value>
            <value>
                <fullName>welding tools</fullName>
            </value>
            <value>
                <fullName>X-ray machines</fullName>
            </value>
            <value>
                <fullName>ventilators</fullName>
            </value>
            <value>
                <fullName>surgical instruments</fullName>
            </value>
            <value>
                <fullName>Microscopes</fullName>
            </value>
            <value>
                <fullName>centrifuges</fullName>
            </value>
            <value>
                <fullName>pipettes</fullName>
            </value>
            <value>
                <fullName>spectrophotometers</fullName>
            </value>
            <value>
                <fullName>Tractors</fullName>
            </value>
            <value>
                <fullName>harvesters</fullName>
            </value>
            <value>
                <fullName>irrigation systems</fullName>
            </value>
            <value>
                <fullName>Helmets</fullName>
            </value>
            <value>
                <fullName>gloves</fullName>
            </value>
            <value>
                <fullName>fire extinguishers</fullName>
            </value>
            <value>
                <fullName>harnesses</fullName>
            </value>
            <value>
                <fullName>Treadmills</fullName>
            </value>
            <value>
                <fullName>weights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>