DeveloperOrg/force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office Equipment</fullName>
            </value>
            <value>
                <fullName>IT Equipment</fullName>
            </value>
            <value>
                <fullName>Construction Equipment</fullName>
            </value>
            <value>
                <fullName>Manufacturing Equipment</fullName>
            </value>
            <value>
                <fullName>Medical Equipment</fullName>
            </value>
            <value>
                <fullName>Laboratory Equipment</fullName>
            </value>
            <value>
                <fullName>Agricultural Equipment</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Fitness Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>