DeveloperOrg/force-app/main/default/objects/Equipment__c/validationRules/Base_Price_must_be_greater_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Price_must_be_greater_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Price__c   &lt;=  0</errorConditionFormula>
    <errorMessage>Base_Price_must_be_greater_Zero</errorMessage>
</ValidationRule>